force-app/main/default/objects/Locations__c/Locations__c.object-meta.xml
<CustomObject>
    <description>This object is used to associate location - address, site information address with account to be used for quoting further.</description>
    <label>Locations</label>
    <nameField>
        <label>Locations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>