force-app/main/default/objects/Locations__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>The address associated to this location record</description>
    <inlineHelpText>The address associated to this location record</inlineHelpText>
    <label>Address</label>
    <type>Address</type>
</CustomField>