force-app/main/default/objects/Locations__c/fields/Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Type__c</fullName>
    <description>Choose a building purpose
If the building is a Warehouse. AP can cover larger sqft area. On the flip side, a classroom would cover a smaller sqft area. On average, we are assuming each AP covers 2500 sqft.</description>
    <inlineHelpText>Choose a building purpose
If the building is a Warehouse. AP can cover larger sqft area. On the flip side, a classroom would cover a smaller sqft area. On average, we are assuming each AP covers 2500 sqft.</inlineHelpText>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Higher Education</fullName>
            </value>
            <value>
                <fullName>K-12</fullName>
            </value>
            <value>
                <fullName>Small Medium Office</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>