force-app/main/default/objects/Locations__c/fields/Number_of_Closets_per_floor__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Closets_per_floor__c</fullName>
    <description>Count of closets, 0 means unknown</description>
    <inlineHelpText>Count of closets, 0 means unknown</inlineHelpText>
    <label>Number of Closets per Floor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>