force-app/main/default/objects/Locations__c/fields/Number_of_Floors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Floors__c</fullName>
    <description>Count of floors on a site</description>
    <inlineHelpText>Count of floors on a site</inlineHelpText>
    <label>Number of Floors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>