force-app/main/default/objects/Locations__c/fields/Sq_ft_per_Floor__c.field-meta.xml
<CustomField>
    <fullName>Sq_ft_per_Floor__c</fullName>
    <description>Average SQFT per floor</description>
    <inlineHelpText>Average SQFT per floor</inlineHelpText>
    <label>Sq ft per Floor</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>