force-app/main/default/objects/Locations__c/fields/Wired_ports_per_floor__c.field-meta.xml
<CustomField>
    <fullName>Wired_ports_per_floor__c</fullName>
    <description>The number of wired devices in the building</description>
    <inlineHelpText>The number of wired devices in the building</inlineHelpText>
    <label>Wired ports per Floor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>